--- a/CarlosGram/myapp/static/styles.css
+++ b/CarlosGram/myapp/static/styles.css
@@ -30,6 +30,7 @@ button {
 
 /* Stylize the placeholder text */
 input::placeholder {
+    font-family: 'Afacad', sans-serif;
     color: #c2c2c2;
     opacity: 1; /* Firefox */
 }
