--- a/CarlosGram/myapp/templates/login.html
+++ b/CarlosGram/myapp/templates/login.html
@@ -18,12 +18,12 @@
             {% endfor %}
         </ul>
     {% endif %}
-    <form action="{% url 'login' %}" method="post">
+    <form action="{% url 'index' %}" method="post">
         <h1>Welcome to Petgram!</h1>
         {% csrf_token %}
         <input type="text" name="username" placeholder="User" required value="{{ form.username.value|default:'' }}">
         <input type="password" name="password" placeholder="Password" required>
-        <strong>Don't have an account? </strong><a href="{% url 'index' %}">Join us!</a>
+        <strong>Don't have an account? </strong><a href="{% url 'signup' %}">Join us!</a>
         <button type="submit">Login</button>
         
     </form>
