--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -1,3 +1,5 @@
+{% extends "homebase.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    ADAWDAWD
 </body>
 </html>
+{% endblock %}
