--- a/CarlosGram/myapp/templates/createnewpost.html
+++ b/CarlosGram/myapp/templates/createnewpost.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" method = POST enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         {% for field in form %}
