--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -1,3 +1,25 @@
 body {
     font-family: 'Afacad', sans-serif;
 }
+
+img {
+    top: 20px;
+    display: block;
+    margin: 30px auto;
+    width: 75%;
+}
+.col-12{
+    margin-top: 40px;
+}
+.post {
+    margin: 50px auto;
+    width: 400px;
+    padding: 1em;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    background-color:#20a6db;
+    padding-left: 10px 10px;
+}
+.post p {
+    text-align: center;/* Center the paragraph horizontally */
+}
