--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -15,7 +15,7 @@
             <div class = "col-12">        
                     {% for post in posts %}
                     <div class = post>
-                        {{user.username}}
+                        {{post.user.username}}
                         <p>Descrição: {{post.description}}</p>
                         {% if post.image %}
                         <img src = "{{post.image.url}}" alt = "">
