--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -8,25 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Posts</h1>
-    <a href = "{% url 'create' %}">create new post</a>
-    <div class = "container">
-        <div class = "row">
-            <div class = "col-12">        
-                    {% for post in posts %}
-                    <div class = post>
-                        {{post.user.username}}
-                        <p>Descrição: {{post.description}}</p>
-                        {% if post.image %}
-                        <img src = "{{post.image.url}}" alt = "">
-                        {% endif %}
-                    </div>
-                    {% endfor %}
-                    
-                
+    {% load static %}
+        <img id="logo" src="{% static 'img/logo.png' %}" alt="Petgram Logo">
+        <a href="{% url 'create' %}">
+            <img id="new" src="{% static 'img/addNewpost.png' %}" alt="Add a new post" title="Add a new post">      
+        </a> 
+        <div class="search-bar">
+            <input type="text" placeholder=" Search...">
+        </div>
+        
+    <div class="posts">
+        <div class="card">
+            <div class="card-content">
+                <h2>Welcome back, {{user.username}}</h2>
+                <p>Later add information to a card</p>
+                <button>hey there</button>
             </div>
         </div>
-    
+        
+        {% for post in posts %}
+        <div class="post">
+            <span>{{post.user.username}}</span>
+            {% if post.image %}
+            
+                <img src="{{post.image.url}}" alt="">
+            
+            {% endif %}
+            <p>Descrição: {{post.description}}</p>
+        </div>
+        {% endfor %}
+    </div>
 </body>
 </html>
 {% endblock %}
