--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -9,18 +9,70 @@ img {
     margin: 30px auto;
     width: 75%;
 }
-.col-12{
-    margin-top: 40px;
+
+.col-12 {
+    margin-top: 125px;
 }
+
 .post {
     margin: 50px auto;
     width: 400px;
     padding: 1em;
     border: 1px solid #CCC;
     border-radius: 10px;
-    background-color:#20a6db;
-    padding-left: 10px 10px;
+    background-color: #2297c5;
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add shadow */
+}
+    
+#logo {
+    float:left;
+    width: 200px;   
+    margin: 10px 0; /* Add 10px margin to the top and bottom */
+    margin-left: 10px;
+    /* display: inline-block; */
 }
 .post p {
+    color : white;
     text-align: center;/* Center the paragraph horizontally */
+}
+
+span {
+    color: white;
+}
+#new {
+    display: inline-block;
+    width: 30px;
+   
+}
+
+.card {
+    float: left;
+    margin-left: 10px;
+    border: 1px solid #CCC; /* Add border */
+    border-radius: 10px; /* Rounded corners */
+    padding: 30px; /* Add padding */
+}
+.search-bar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 200px;
+}
+.search-bar input[type="text"] {
+    width: 430px;
+    height: 40px;
+    font-size: 16px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
+}
+button {
+    display: block;
+    margin-top: 20px; /* Add margin-top to lower the button */
+    border-radius: 10px;
+    border: 3px solid #20a6db;
+    background-color: #ffffff;
+    font-size: 18px;
+    padding: 10px 20px;
+    cursor: pointer;
 }
