--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -18,13 +18,23 @@
         </div>
         
     <div class="posts">
-        <div class="card">
+        <div class="card2">
             <div class="card-content">
-                <h2>Welcome back, {{user.username}}</h2>
+                <h2>Here's what's new!</h2>
                 <p>Later add information to a card</p>
+                <p>this should be bigger</p>
+                <p>and this too</p>
                 <button>hey there</button>
             </div>
         </div>
+        <div class="posts">
+            <div class="card">
+                <div class="card-content">
+                    <h2>Welcome back, {{user.username}}</h2>
+                    <p>Later add information to a card</p>
+                    <button>hey there</button>
+                </div>
+            </div>
         
         {% for post in posts %}
         <div class="post">
