--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -28,7 +28,7 @@ img {
     float:left;
     width: 200px;   
     margin: 10px 0; /* Add 10px margin to the top and bottom */
-    margin-left: 10px;
+    margin-left: 40px;
     /* display: inline-block; */
 }
 .post p {
@@ -47,16 +47,28 @@ span {
 
 .card {
     float: left;
-    margin-left: 10px;
+    margin-left: 40px;
     border: 1px solid #CCC; /* Add border */
     border-radius: 10px; /* Rounded corners */
     padding: 30px; /* Add padding */
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add inner shadow */
 }
+
+.card2 {
+    /* Inherit styles from .card */
+    float: right;
+    margin-right: 40px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    padding: 30px;
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
+}
+
 .search-bar {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right: 200px;
+    margin-right: 240px;
 }
 .search-bar input[type="text"] {
     width: 430px;
@@ -75,4 +87,5 @@ button {
     font-size: 18px;
     padding: 10px 20px;
     cursor: pointer;
+
 }
