--- a/CarlosGram/myapp/static/createnewpoststyle.css
+++ b/CarlosGram/myapp/static/createnewpoststyle.css
@@ -1,10 +1,12 @@
 .card {
-    float: left;
-    margin: 175px 250px;
-    border: 1px solid #CCC; /* Add border */
-    border-radius: 10px; /* Rounded corners */
-    padding: 40px; /* Add padding */
-    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add inner shadow */
+    display : flex;
+    align-content: space-between;
+    margin : 40px auto;
+    width : 50%;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    padding: 40px; 
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); 
 }
 body {
     font-family: 'Afacad', sans-serif;
@@ -20,6 +22,11 @@ button {
     padding: 10px 20px;
     cursor: pointer;
 
+}
+
+button:hover {
+    background-color: #20a6db;
+    color: white;
 }
 input {
     display: block;
@@ -49,14 +56,13 @@ input[type="file"] {
     width : 90%;
 }
 .pre-vis {
-    float: left;
-    width: 300px;
-    height: 442px;
-    margin-top: 170px;
-    border: 1px solid #CCC; 
-    border-radius: 10px; 
-    padding: 40px; 
-    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); 
+    margin-left : 40px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    
+     
 }
 .pre-vis img {
     max-width: 100%;
@@ -65,4 +71,7 @@ input[type="file"] {
 }
 #back {
     margin-top:60px;
+}
+.error {
+    color : red;
 }
