--- a/CarlosGram/myapp/templates/createnewpost.html
+++ b/CarlosGram/myapp/templates/createnewpost.html
@@ -22,29 +22,30 @@
     </a>
     
 
-            <div class="card">
-                <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
-                    {% csrf_token %}
-                    <h1>Create New Post</h1>
-                    <p><textarea name="description" placeholder="What's going on?"></textarea></p>
-                    <p>
-                        <input type="file" name="image" id="image-input" onchange="previewImage(this)">
-                    </p>
-                    <button type="submit">Post</button>
-                {% if messages %}
-                    {% for message in messages %}
-                        {% if message.tags and 'IMAGE_BLANK_ERROR' in message.tags %}
-                            <p class="error">{{ message }}</p>
-                        {% endif %}
-                    {% endfor %}
-                {% endif %}                   
-                </form>
-                <div class = pre-vis>
-                    <h1>Image preview</h1>
-                    <img id="image-preview" src="#" alt="Image Preview">
+            <div id = "overlay">
+                <div class="card">
+                    <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
+                        {% csrf_token %}
+                        <h1>Create New Post</h1>
+                        <p><textarea name="description" placeholder="What's going on?"></textarea></p>
+                        <p>
+                            <input type="file" name="image" id="image-input" onchange="previewImage(this)">
+                        </p>
+                        <button type="submit">Post</button>
+                    {% if messages %}
+                        {% for message in messages %}
+                            {% if message.tags and 'IMAGE_BLANK_ERROR' in message.tags %}
+                                <p class="error">{{ message }}</p>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                    </form>
+                    <div class = pre-vis>
+                        <h1>Image preview</h1>
+                        <img id="image-preview" src="#" alt="Image Preview">
+                    </div>
                 </div>
             </div>
-        
    
     
     <script>
