--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -14,10 +14,12 @@ img {
     margin: 50px auto;
     width: 400px;
     padding: 1em;
+    padding-top: 30px;
     border: 1px solid #CCC;
     border-radius: 10px;
     background-color: #2297c5;
     box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add shadow */
+    height: 115%;
 }
     
 #logo {
@@ -33,7 +35,15 @@ img {
 }
 
 span {
-    color: white;
+    color: rgb(0, 0, 0);
+    font-size: 18px;
+    border: 1px solid #CCC; /* Add border */
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add inner shadow */
+    background-color: #ffffff;
+    
+    
 }
 #new {
     display: inline-block;
@@ -48,6 +58,13 @@ span {
     border-radius: 10px; /* Rounded corners */
     padding: 30px; /* Add padding */
     box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2); /* Add inner shadow */
+}
+#profilepic{
+    margin : -10px 0;
+    display: inline-block;
+    width: 30px;
+
+    
 }
 
 .card2 {
@@ -88,4 +105,7 @@ button {
 button:hover {
     background-color: #20a6db;
     color: white;
+}
+a {
+    text-decoration: none;
 }
