--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -38,8 +38,9 @@
         
         {% for post in posts %}
         <div class="post">
+            
             <a href="{% url 'view_other_profile' username=post.user.username %}">
-                <span>{{ post.user.username }}</span>
+                <span><img id = "profilepic" src="{{ user_profile.profile_image.url }}" alt="">{{ post.user.username }}</span>
             </a>
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="">
