--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -40,7 +40,7 @@
         <div class="post">
             
             <a href="{% url 'view_other_profile' username=post.user.username %}">
-                <span><img id = "profilepic" src="{{ user_profile.profile_image.url }}" alt="">{{ post.user.username }}</span>
+                <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}</span></pre>
             </a>
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="">
