--- a/CarlosGram/myapp/static/profilestyles.css
+++ b/CarlosGram/myapp/static/profilestyles.css
@@ -1,18 +1,77 @@
-body {
+body, pre {
     font-family: 'Afacad', sans-serif;
     font-size: 18px;
 }
-img {
-    width: 50px;
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+#profile {
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+
+}
+h1 {
+    text-shadow: #5e5f5f 1px 1px 1px;
+    font-size: 40px;
+    margin-top: 10px;
+}
+.user {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;    
+
 }
 .posts{
+    margin-top: 30px;
     display: grid;
-    grid-template-columns: repeat(4,200px);
-    grid-auto-rows: 200px;
+    grid-template-columns: repeat(4,250px);
+    grid-auto-rows: 250px;
     gap: 10px;
 }
 .post img{
+    border-radius: 10px;
+    box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+#username {
+    display: flex;
+    flex-direction: row;
+}
+button {
+    box-shadow: 0 7px 7px rgba(22, 45, 255, 0.2);
+    border-radius: 10px;
+    border: 3px solid #20a6db;
+    background-color: #ffffff;
+    font-size: 18px;
+    padding: 10px 20px;
+    cursor: pointer;
+
+}
+#follow {
+    position: relative;
+    left: 15px;
+    font-size: 20px;
+    bottom: 10px;
+    
+}
+#follow:hover {
+    background-color: #20a6db;
+    color: white;
+}
+#bio {
+    font-size: 20px;
+    color : #5e5f5f;
+    position: absolute;
+    top: 125px;
 }
