--- a/CarlosGram/myapp/templates/profile.html
+++ b/CarlosGram/myapp/templates/profile.html
@@ -7,31 +7,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    {% if is_own_profile %}
-        <h2>Your Profile</h2>
-    {% else %}
-        <h2>{{ user_profile.user.username }}'s Profile</h2>
-    {% endif %}
-    <img src="{{ user_profile.profile_image.url }}" alt="">
-
-    <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
-         {% if is_own_profile %}
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Save</button>
-        {% endif %} 
-    </form>
-
-    <div class="posts">
-        {% for post in posts %}
-        <div class="post"> 
-            {% if post.image %}
-                <img id = "post_image" src="{{ post.image.url }}" alt="">
-            {% endif %}
+<body>    
+    <div class = "container">
+        <div class = "user">
+            <pre><h1 id = "username"><img id = "profile" src="{{ user_profile.profile_image.url }}" alt="">  {{ user_profile.user.username }}</h1></pre>
+            <button id = "follow">follow</button>
         </div>
-        {% endfor %}
-    </div>    
+        {% if user_profile.bio %}
+            <p id="bio">"{{ user_profile.bio }}"</p>
+        {% endif %}
+        <div class="posts">
+            {% for post in posts %}
+            <div class="post">
+                {% if post.image %}
+                    <img id = "post_image" src="{{ post.image.url }}" alt="">
+                {% endif %}
+            </div>
+            {% endfor %}
+        </div>
+        <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
+            {% if is_own_profile %}
+               {% csrf_token %}
+               {{ form.as_p }}
+               <button type="submit">Save</button>
+           {% endif %} 
+           </form>
+    </div>  
 </body>
+
 </html>
 {% endblock %}
