--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -23,6 +23,7 @@ img {
 }
     
 #logo {
+   
     float:left;
     width: 200px;   
     margin: 10px 0; /* Add 10px margin to the top and bottom */
@@ -46,12 +47,14 @@ span {
     
 }
 #new {
+    
     display: inline-block;
     width: 30px;
    
 }
 
 .card {
+    position: fixed;
     float: left;
     margin-left: 40px;
     border: 1px solid #CCC; /* Add border */
@@ -71,12 +74,12 @@ span {
 
 .card2 {
     /* Inherit styles from .card */
-    float: right;
-    margin-right: 40px;
     border: 1px solid #CCC;
     border-radius: 10px;
     padding: 30px;
     box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
+    position: fixed;
+    right: 50px
 }
 
 .search-bar {
@@ -114,4 +117,21 @@ a {
 pre {
     font-family: 'Afacad', sans-serif;
     font-size: 18px;
+}
+
+.info {
+    display:  flex;
+    flex-direction: row; 
+}
+
+#like {
+    position: relative;
+    right: 125px;
+    width: 25px;
+    top: -12px;
+}
+#num {
+    position: relative;
+    right: 255px;
+    
 }
