--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -38,10 +38,14 @@
         
         {% for post in posts %}
         <div class="post">
-            
-            <a href="{% url 'view_other_profile' username=post.user.username %}">
-                <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}</span></pre>
-            </a>
+            <div class = "info">
+                <a href="{% url 'view_other_profile' username=post.user.username %}">
+                    <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}</span></pre>
+                </a>
+                <img id="like" src="{% static 'img/likePost.svg' %}" alt="Add a new post" title="Add a new post">
+                <p id = "num" >{{post.likes}}</p>
+            </div>
+
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="">
             {% endif %}
