--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -38,18 +38,23 @@
         
         {% for post in posts %}
         <div class="post">
+            
             <div class = "info">
                 <a href="{% url 'view_other_profile' username=post.user.username %}">
                     <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}</span></pre>
                 </a>
-                <img id="like" src="{% static 'img/likePost.svg' %}" alt="Add a new post" title="Add a new post">
-                <p id = "num" >{{post.likes}}</p>
+               <div id = "postlikes">
+                   <a href="{% url 'like_post' post.id %}">
+                        <img id = "heart" src="{% static 'img/likePost.svg' %}" alt="">
+                    </a><p>{{ post.likes}}</p>
+               </div>
             </div>
 
             {% if post.image %}
                 <img src="{{ post.image.url }}" alt="">
             {% endif %}
             <p>{{ post.description }}</p>
+            <p>{{ post.date }}</p>
         </div>
         {% endfor %}
     </div>
