commentr backend done

--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -52,7 +52,7 @@
                         <img id = "heart" src="{% static 'img/likePost.svg' %}" alt="">
                     </a><p>{{ post.likes}}</p>       
                     {% endif %}
-                    <a href="{% url 'post_details' post.id %}">
+                    <a href="{% url 'comment_post' post.id %}">
                         <img id = "heart" style = "width: 25px" src="{% static 'img/comment.svg' %}" alt="">
                     </a><p>0</p>
                </div>
