--- a/CarlosGram/myapp/templates/profile.html
+++ b/CarlosGram/myapp/templates/profile.html
@@ -31,7 +31,7 @@
             <form method="post" method="POST" enctype="multipart/form-data" id="post-form">                
                    {% csrf_token %}
                    {{ form.as_p }}
-                   <button id = "edit" type="submit">Save</button>
+                   <button type="submit">Save</button>
                </form>
         </details>
         {% endif %}
