starting to stylize post_detail

--- a/CarlosGram/myapp/templates/base.html
+++ b/CarlosGram/myapp/templates/base.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <style>
+            body{
+                background-color: #fafafa;
+                font-family: 'Afacad', sans-serif;
+            }
+    </style>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'loginstyles.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad&display=swap" rel="stylesheet">
