--- a/CarlosGram/myapp/templates/post_details.html
+++ b/CarlosGram/myapp/templates/post_details.html
@@ -1,19 +1,36 @@
+{% extends "base.html" %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'postdetail.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Post</button>
-    </form>
-    {% for comment in comments %}
-    <img src="{{ comment.user_profile.profile_image.url }}" alt="">
-        <p>{{ comment.user.username }}: {{ comment.comment }}</p>
-    {% endfor %}
+    <div class = "post_details">
+        <div class = "test">
+            <div class = "post_image_and_likes">
+                <img src = "{{ post.image.url }}" alt="">
+                <p>{{ post.user.username }}: {{ post.description }}</p>
+                <p>{{ post.likes }}</p>
+                <p>{{ post.comment }}</p>
+            </div>
+            <div class = "post_comments">
+                {% for comment in comments %}
+                <img id = "profile_image" src="{{ comment.user_profile.profile_image.url }}" alt="">
+                    <p>{{ comment.user.username }}: {{ comment.comment }}</p>
+                {% endfor %}
+                <form method="post" method="POST" enctype="multipart/form-data" id="post-form">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit">Post</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
+{% endblock %}
