--- a/CarlosGram/myapp/static/postdetail.css
+++ b/CarlosGram/myapp/static/postdetail.css
@@ -1,6 +1,6 @@
 #profile_image{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 50%;
 }
 .test {
@@ -30,6 +30,13 @@
     border: 1px solid #000000;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#user {
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
