--- a/CarlosGram/myapp/templates/base.html
+++ b/CarlosGram/myapp/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-            body{
+            body, pre{
                 background-color: #fafafa;
                 font-family: 'Afacad', sans-serif;
             }
