--- a/CarlosGram/myapp/static/postdetail.css
+++ b/CarlosGram/myapp/static/postdetail.css
@@ -1,4 +1,5 @@
 #profile_image{
+    border: 1px solid rgb(198, 197, 197);
     width: 30px;
     height: 30px;
     border-radius: 50%;
@@ -19,7 +20,9 @@
 }
 
 .post_image_and_likes{
-    border: 1px solid #000000;
+    width:600px;
+    height:600px;
+    border: 1px solid rgb(198, 197, 197);
     display: flex;
     flex-direction: column;
     align-items: baseline;
@@ -27,16 +30,73 @@
 }
 
 .post_comments{
-    border: 1px solid #000000;
+    height: 600px;
+    width: 400px;
+    border: 1px solid rgb(198, 197, 197);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
+}
+
+.all_comments{
+    padding:15px;
+    overflow: auto;
+
 }
 
 #user {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+}
+
+.img_container {
+    border: 1px solidrgb(198, 197, 197);
+    width: 100%;
+    height: 100%;
+}
+
+#post_image {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+
+strong{
+    position: relative;
+    left: 10px;
+    font-size: 24px;
+
+}
+
+#main_image{
+    border: 1px solid rgb(198, 197, 197);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.post_info{
+    padding: 15px;
+    width: 95%;
+    height: 400px;
+    overflow: auto;
+
+}
+
+form {
+    padding:15px;
+}
+
+#post_desc {
+    position: relative;
+    color: grey;
+    font-size: 18px;
+    bottom: 10px;
+}
+
+#heart {
+    width :15px;
 }
