--- a/CarlosGram/myapp/static/postdetail.css
+++ b/CarlosGram/myapp/static/postdetail.css
@@ -20,6 +20,8 @@
 }
 
 .post_image_and_likes{
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
     width:600px;
     height:600px;
     border: 1px solid rgb(198, 197, 197);
@@ -36,11 +38,15 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .all_comments{
-    padding:15px;
+    padding: 20px;
     overflow: auto;
+    height: 88%;
+    width: 88%;
 
 }
 
@@ -61,6 +67,17 @@
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-top-left-radius: 10px;
+}
+
+
+#heart:hover {
+    transform: scale(1.2);
+}
+
+#comment:hover {
+    cursor: pointer;
+    transform: scale(1.2);
 }
 
 
@@ -79,9 +96,10 @@ strong{
 }
 
 .post_info{
-    padding: 15px;
+    border-bottom-left-radius: 10px;
+    padding-left: 20px;
     width: 95%;
-    height: 400px;
+    height: 300px;
     overflow: auto;
 
 }
@@ -91,12 +109,86 @@ form {
 }
 
 #post_desc {
+    word-wrap: break-word;
     position: relative;
     color: grey;
     font-size: 18px;
-    bottom: 10px;
+    bottom: 20px;
 }
 
+p {
+    width: 95%;
+
+}
 #heart {
-    width :15px;
+    width :25px;
+}
+
+#comment {
+    position: relative;
+    width: 22px;
+    bottom: 3px;
+}
+.like_post{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 15px;
+    position: relative;
+    top: 5px;
+    left: 25px;
+}
+
+#amount_likes{
+    position: relative;
+    left: 5px;
+    font-size: 18px;
+    bottom: 2px;
+
+}
+
+button {
+    margin: auto;
+    /* margin-top: 20px; */
+    border-radius: 10px;
+    border: 3px solid #20a6db;
+    background-color: #ffffff;
+    font-size: 14px;
+    padding: 10px 20px;
+    cursor: pointer;
+    position: relative;
+    
+}
+
+button:hover {
+    background-color: #20a6db;
+    color: white;
+}
+
+input::placeholder {
+    font-family: 'Afacad', sans-serif;
+    font-size: 18px;
+    color: #c2c2c2;
+    opacity: 1; /* Firefox */
+}
+
+form input {
+    width: 70%;
+    padding: 15px;
+    border: 1px solid #CCC;
+    border-radius: 10px;
+    font-size: 12px;
+    color: #333;
+}
+form {
+    display: flex;
+    padding: 15px
+}
+
+#comment_info{
+    width:85%;
+    word-wrap: break-word;
+    position: relative;
+    left: 10px;
 }
