--- a/CarlosGram/myapp/static/postdetail.css
+++ b/CarlosGram/myapp/static/postdetail.css
@@ -60,7 +60,7 @@
 .img_container {
     border: 1px solidrgb(198, 197, 197);
     width: 100%;
-    height: 100%;
+    height:400px;
 }
 
 #post_image {
@@ -150,7 +150,6 @@ p {
 
 button {
     margin: auto;
-    /* margin-top: 20px; */
     border-radius: 10px;
     border: 3px solid #20a6db;
     background-color: #ffffff;
